Misc mostly non-functional changes:
  * Modernize a few things likely to be removed from upcoming JDKs, including Applet demo and SecurityManager related stuff
  * Localization got broken at some point in mavenization - fixed
  * License headers are now consistent and correct
  * Since there was ancient javadoc published from the old web site under `www/`, updated it so at least if someone stumbles across it, it's up-to-date
  * Remove old distribution jars